--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,6 +33,7 @@ dependencies:
   flutter_animate: ^4.2.0+1
   flutter_svg: ^2.0.10+1
   lottie: ^3.1.0
+  animated_svg: ^2.0.0
 
 dev_dependencies:
   flutter_test:
