--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -24,7 +24,7 @@ dependencies:
   permission_handler: ^11.0.1
   flutter_lints: ^2.0.0
   flutter_flavorizr: ^2.2.1
-  cached_network_image: ^3.3.0
+  cached_network_image: ^3.3.1
   flutter_bloc: ^8.1.3
   equatable: ^2.0.5
   easy_localization: ^3.0.3
@@ -34,27 +34,16 @@ dependencies:
   flutter_svg: ^2.0.10+1
   lottie: ^3.1.0
   animated_svg: ^2.0.0
+  firebase_core: ^2.27.0
+  firebase_auth: ^4.17.8
+  firebase_storage: ^11.6.9
+  cloud_firestore: ^4.15.8
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
-
-  # The "flutter_lints" package below contains a set of recommended lints to
-  # encourage good coding practices. The lint set provided by the package is
-  # activated in the `analysis_options.yaml` file located at the root of your
-  # package. See that file for information about deactivating specific lint
-  # rules and activating additional ones.
   flutter_lints: ^2.0.0
-
-# For information on the generic Dart part of this file, see the
-# following page: https://dart.dev/tools/pub/pubspec
-
-# The following section is specific to Flutter packages.
 flutter:
-
-  # The following line ensures that the Material Icons font is
-  # included with your application, so that you can use the icons in
-  # the material Icons class.
   uses-material-design: true
   assets:
     - assets/anim/
