--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,9 @@ dependencies:
   firebase_auth: ^4.17.8
   firebase_storage: ^11.6.9
   cloud_firestore: ^4.15.8
+  pinput: ^2.2.8
+  gradient_borders: ^1.0.0
+  provider: ^6.1.2
 
 dev_dependencies:
   flutter_test:
